# Triton

./: .gitignore  .gitigore  README.md
FaceRecognition_DS/: .gitignore  CMakeLists.txt  README.md  config.yaml
FaceRecognition_DS/RabitMQ/: test.py
FaceRecognition_DS/Triton/: deepstream_apps_config.txt  deepstream_apps_config_triton.txt  run.sh  run_triton.sh  triton.sh
FaceRecognition_DS/Triton/configs/: .infer_config_iresnet_triton.txt.swp  dstest2_tracker_config.txt  feature_labels.txt  infer_config_iresnet.txt  infer_config_iresnet_triton.txt
FaceRecognition_DS/Triton/configs/infer_nvds/: Makefile  config.yaml  make.sh  nvdsparsebbox_centernet.cpp  nvdsparsebbox_scrfd.cpp
FaceRecognition_DS/Triton/models/: modify_dim_onnx.py  onnx_to_trt.py
FaceRecognition_DS/Triton/triton/ensemble/: config.pbtxt
FaceRecognition_DS/Triton/triton/extraction/: .config.pbtxt.swp  config.pbtxt
FaceRecognition_DS/Triton/triton/preprocess/: config.pbtxt
FaceRecognition_DS/Triton/triton/preprocess/1/: model.py
FaceRecognition_DS/apps/: CMakeLists.txt
FaceRecognition_DS/apps/FaceRecognition_DS_Final/: CMakeLists.txt  deepstream_apps_config.txt  facerecognition_ds_final.cpp
FaceRecognition_DS/apps/FaceRecognition_DS_Final/configs/: infer_config_center.txt  infer_config_iresnet.txt  infer_config_retinaface _cov.txt  infer_config_retinaface.txt  infer_config_scrfd.txt  msgconv_config.txt
FaceRecognition_DS/apps/FaceRecognition_DS_Final/configs/infer_nvds/: CMakeLists.txt  nvdsparsebbox_retinaface.cpp  nvdsparsebbox_scrfd.cpp
FaceRecognition_DS/apps/FaceRecognition_DS_Final/models/: modify_dim.py  onnx_to_trt.py
FaceRecognition_DS/config_docker/: config.yaml
FaceRecognition_DS/consumer_icomm/: README.md  consumer_frame.py  consumer_frame_ds.py  face_detectors.py  face_model.py  hnsw.py  ic_rabbitmq.py  landmark_model.py  utils.py
FaceRecognition_DS/consumer_icomm/RabitMQ/: ic_rabbitmq_sent.py  test.py
FaceRecognition_DS/consumer_icomm/config/: parameter.cfg
FaceRecognition_DS/consumer_icomm/exec_backends/: trt_loader.py
FaceRecognition_DS/consumer_icomm/hnsw_model_041221_trt8.2/: model_hnsw_meta.json
FaceRecognition_DS/face_recognition_c_ver2/: .gitignore  CMakeLists.txt  README.md  add_face.cpp  add_face.sh  face_detection.cpp  facerecognition.cpp  main  test.cpp  test_extract.cpp
FaceRecognition_DS/face_recognition_c_ver2/detection/: CMakeLists.txt
FaceRecognition_DS/face_recognition_c_ver2/detection/config/: config.yaml  config_anti.yaml
FaceRecognition_DS/face_recognition_c_ver2/detection/header/: RetinaFace.h  face_alignment.h  pose_estimate.h
FaceRecognition_DS/face_recognition_c_ver2/detection/src/: RetinaFace.cpp  face_alignment.cpp  main.cpp  pose_estimate.cpp
FaceRecognition_DS/face_recognition_c_ver2/detection/types/: facedet.h  facelandmark.h  feature.h
FaceRecognition_DS/face_recognition_c_ver2/include/antispoofing/: antispoofing.cpp  face_antispoofing.h  gen_wts.py  test_cam.py  yololayer.h
FaceRecognition_DS/face_recognition_c_ver2/include/antispoofing/Detection/: detect.py
FaceRecognition_DS/face_recognition_c_ver2/include/antispoofing/Detection/utils/: general.py
FaceRecognition_DS/face_recognition_c_ver2/include/detection/: CMakeLists.txt  alignment.h  convert_mnet.cpp  decode.cu  decode.h  face_align.cpp  retina_mnet.cpp  retina_mnet.h  retina_r50.cpp
FaceRecognition_DS/face_recognition_c_ver2/include/detection_with_mask/: CMakeLists.txt  decode.cu  decode.h  retina_mnet_mask.h  retinafaceAntiCov.cpp  test.cpp
FaceRecognition_DS/face_recognition_c_ver2/include/extraction/: .ExtractFeature.h.kate-swp  API.h  CMakeLists.txt  ExtractFeature.h  prelu.cu  prelu.h
FaceRecognition_DS/face_recognition_c_ver2/include/headpose_estimation/: pose_estimate.cpp
FaceRecognition_DS/face_recognition_c_ver2/include/manager/: search.h
FaceRecognition_DS/face_recognition_c_ver2/weights/: convert_feature.sh  onnx_to_trt.py
FaceRecognition_DS/gst-example/gst-dsample-custom/: Makefile  aligner.cpp  gstdsexample.cpp  gstdsexample.h
FaceRecognition_DS/gst-example/gst-dsexample_ver2/: Makefile  gstdsexample.cpp  make.sh
FaceRecognition_DS/gst_nvinfer_custom/: Makefile  aligner.cpp  gstnvinfer.cpp  gstnvinfer.h  make.sh
FaceRecognition_DS/include/FaceRecognition_DS_Final/: ExtractFeature.h  alignment.h  facerecognition_ds_final.h
FaceRecognition_DS/include/a/: nvdsinfer.h  nvdsinfer_context.h
FaceRecognition_DS/kafka/: get_data.py
FaceRecognition_DS/src/: CMakeLists.txt
FaceRecognition_DS/src/FaceRecognition_DS_Final/: ExtractFeature.cpp  aligment.cpp  facerecognition_ds_final.cpp
client/: client.py  extract_feature.py  extract_feature_res50_onnx.py  extract_feature_res50_pytorch.py  preprocess.py  preprocess_face.py  preprocess_face_dali.py  scrfd.py
client/backbones/: __init__.py
deepstream_triton/centerface/config/: centerface.txt  run.sh  source1_primary_detector.txt  test.npy
deepstream_triton/centerface/customparser/: Makefile  customparserbbox_centernet.cpp
docs/: README.md
docs/docs/: install.md  model_configuration.md  perf_analyzer.md  triton_pytorch.md
ensemble_res50/: config.pbtxt
preprocess_face/: config.pbtxt
preprocess_face/1/: model.py
python_backend/preprocess/: config.pbtxt
python_backend/preprocess/1/: model.py
resnet50_trt/: config.pbtxt
server/: export_dali_face.py  onnx2trt.sh  onnx2trt_res124.sh  run.sh
server/convert_model/: convert_iresnet.py  onnx2trt.sh  onnx2trt_res124.sh  onnx2trt_scrfd.sh  onnx_exporter.py
server/convert_model/backbones/: iresnet.py
server/ensemble_face/: config.pbtxt
server/ensemble_res50/: config.pbtxt
server/face/inference_detect/: config.pbtxt
server/face/preprocess_detect/: config.pbtxt
server/models/ensemble_face/: config.pbtxt
server/models/ensemble_res50/: config.pbtxt
server/models/face_extraction/: config.pbtxt
server/models/preprocess/: config.pbtxt
server/models/preprocess_face/: config.pbtxt
server/models/preprocess_face_dali/: config.pbtxt
server/resnet50_1_trt/: config.pbtxt
server/resnet50_trt/: config.pbtxt
(+17 files in other folders)
